# nelo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: EmbedShaders.cmake  FindFFmpeg.cmake
examples/: hello_nelo.lua  module.lua
lib/: CMakeLists.txt
lib/include/nelo/anim/: easing.h  keyframe.h  timeline.h  traits.h
lib/include/nelo/core/: collection.h  context.h  encoder.h  log.h  scene.h
lib/include/nelo/render/: buffer.h  circle_renderer.h  command.h  curve_renderer.h  framebuffer.h  layout.h  renderer.h  scene_renderer.h  shaders.h  vao_cache.h
lib/include/nelo/renderer/: circle_renderer.h  color.h  context.h  curve.h  curve_renderer.h  renderer.h  shapes.h  transform.h
lib/include/nelo/scene/: collection.h  entity.h  keyframe.h  path.h  scene.h  timeline.h  traits.h  transform.h
lib/include/nelo/script/: lua_scene.h  lua_server.h  lua_timeline.h  lua_traits.h  lua_types.h  server.h
lib/include/nelo/types/: curve.h  path.h  shapes.h  transform.h  visibility.h
lib/include/nelo/video/: encoder.h
lib/src/core/: context.cpp  encoder.cpp  log.cpp  scene.cpp
lib/src/render/: buffer.cpp  circle_renderer.cpp  curve_renderer.cpp  framebuffer.cpp  scene_renderer.cpp  shaders.cpp
lib/src/renderer/: circle_renderer.cpp  context.cpp  curve_renderer.cpp  renderer.cpp
lib/src/scene/: scene.cpp
lib/src/script/: lua_scene.cpp  lua_server.cpp  lua_timeline.cpp  lua_types.cpp  server.cpp
lib/src/video/: encoder.cpp
module/: CMakeLists.txt
module/src/: lua_module.cpp
shaders/: circle_fragment.glsl  circle_vertex.glsl  curve_fragment.glsl  curve_vertex.glsl
src/app/: main.cpp
src/renderer/: context.cpp  context.h
src/scene/: keyframe.h
src/timeline/: main.cpp  timeline.h  traits.cpp  traits.h
tests/: CMakeLists.txt
tests/anim/: timeline.cpp
tests/scene/: timeline.cpp
